tests/08-unrecognized-attribute.stderr
error: expected `each`
  --> tests/08-unrecognized-attribute.rs:19:15
   |
19 |     #[builder(eac = "arg")]
   |               ^^^
